# bevy-wgsl

./: Cargo.toml  README.md  build.rs  weslify.py
examples/builder/: Cargo.toml  codegen.rs
examples/builder/src/: main.rs
examples/consumer/: Cargo.toml  generated.rs
examples/consumer/src/: main.rs
src/: lib.rs
src/shaders/bevy/core_pipeline/: fullscreen_vertex_shader.wesl  oit.wesl  tonemapping.wesl  tonemapping_lut_bindings.wesl
src/shaders/bevy/pbr/: ambient.wesl  clustered_forward.wesl  environment_map.wesl  fog.wesl  forward_io.wesl  irradiance_volume.wesl  light_probe.wesl  lighting.wesl  lightmap.wesl  mesh_bindings.wesl  mesh_functions.wesl  mesh_preprocess_types.wesl  mesh_types.wesl  mesh_view_bindings.wesl  mesh_view_types.wesl  meshlet_bindings.wesl  meshlet_visibility_buffer_resolve.wesl  morph.wesl  occlusion_culling.wesl  parallax_mapping.wesl  pbr_bindings.wesl  pbr_deferred_functions.wesl  (+18 more)
src/shaders/core_pipeline/: oit.wesl  tonemapping.wesl
src/shaders/pbr/: environment_map.wesl  forward_io.wesl  irradiance_volume.wesl  light_probe.wesl  lighting.wesl  mesh_functions.wesl  mesh_preprocess_types.wesl  mesh_types.wesl  meshlet_bindings.wesl  pbr_functions.wesl  pbr_prepass_functions.wesl  prepass_bindings.wesl  prepass_io.wesl  raymarch.wesl  shadows.wesl  ssao_utils.wesl  ssr.wesl  transmission.wesl  view_transformations.wesl
src/shaders/render/: globals.wesl  maths.wesl
src/shaders/sprite/: mesh2d_vertex_output.wesl  mesh2d_view_bindings.wesl  mesh2d_view_types.wesl  sprite_view_bindings.wesl
src/shaders/ui/: ui_vertex_output.wesl
(+21 files in other folders)
