[workspace]
members = ["examples/consumer"]
resolver = "3"

[package]
name = "bevy-wgsl"
description = "Bevy WESL shaders"
version = "0.1.0"
edition = "2024"

[dependencies]
wesl = { version = "0.1.2", features = ["naga_ext"] }

[build-dependencies]
wesl = { version = "0.1.2", features = ["package", "naga_ext"] }

[patch.crates-io]
wesl = { path = "../wesl-rs/crates/wesl" }
