[workspace]
members = ["examples/consumer", "examples/builder"]
resolver = "3"

[package]
name = "bevy-wgsl"
description = "Bevy WESL shaders"
version = "0.1.0"
edition = "2024"

[dependencies]
wesl = { version = "0.2.0", features = ["naga-ext"] }

[build-dependencies]
wesl = { version = "0.2.0", features = ["package", "naga-ext", "eval"] }

[patch.crates-io]
wesl = { path = "../wesl-rs/crates/wesl" }
